--- a/main.html
+++ b/main.html
@@ -10,6 +10,8 @@
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
+	<h1> Why i want to beacome a developer </h1>
+	<p> lorem 30 </p> 
 
 </body>
 
